--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
-    <!--<link rel="stylesheet" href="./style.css">-->
-    <style>
-     body {
-          width: 100%;
-          height: 100%;
-          margin: 0;
-          text-align: center;
-        }
+    <link rel="stylesheet" href="./style.css">
+    /*<style>*/
+    /* body {*/
+    /*      width: 100%;*/
+    /*      height: 100%;*/
+    /*      margin: 0;*/
+    /*      text-align: center;*/
+    /*    }*/
         
-    nav a {
-          padding:0 10px 0 10px;
-          background-color:gray;
-        }
+    /*nav a {*/
+    /*      padding:0 10px 0 10px;*/
+    /*      background-color:gray;*/
+    /*    }*/
         
-    p #featured-property {
-         width:800px;
-         text-align:center;
-        }
-    #details div {
-          background-color:red; 
-          float: left;
-          display: block;
-          width:25%;
-        }    
-    </style>
+    /*p #featured-property {*/
+    /*     width:800px;*/
+    /*     text-align:center;*/
+    /*    }*/
+    /*#details div {*/
+    /*      background-color:red; */
+    /*      float: left;*/
+    /*      display: block;*/
+    /*      width:25%;*/
+    /*    }    */
+    /*</style>*/
   </head>
   
   <body>
