--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
         
     nav a {
+      color:#E5330C;
           padding:0 10px 0 10px;
           background-color:gray;
         }
